--- a/app/assets/scss/style.scss
+++ b/app/assets/scss/style.scss
@@ -87,10 +87,10 @@ body {
     margin: 100px 0 200px 0;
     &__slider-item {
         display: flex;
+        justify-content: center;
         flex: 1 0 auto;
         height: 100%;
     }
-
     .owl-stage {
         display: flex;
     }
